<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/cardview_dark_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <androidx.cardview.widget.CardView
        android:id="@+id/personalDetailsCard"
        style="@style/centreLocatorCardDesign"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusableInTouchMode="false"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputUserCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/userCode"
                    style="@style/modifiedEditText"
                    android:hint="@string/userCode"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtRemark"
                    style="@style/modifiedEditText"
                    android:hint="@string/password"
                    android:inputType="textWebPassword"
                    android:minLines="2" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/centre_button"
                android:text="@string/login"
                android:textColor="@color/whiteTextColor" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>
